Fix z-index on svg shapes and slide-grid (#9)

--- a/unlockopen.css
+++ b/unlockopen.css
@@ -342,6 +342,7 @@ div[class^="slide-grid"] {
   grid-template-rows: [emoji] 10rem [main-content] auto [bottom-content] max-content [footer] max-content;
   width: 960px;
   height: 100%;
+	z-index: 1;
 }
 
 /* slide: title centered  */
@@ -422,7 +423,7 @@ div[class^="slide-grid"] {
   margin: 0;
   margin-bottom: var(--space-s);
   text-align: right;
-  
+
 }
 
 .subbrand:empty + .chapter {
@@ -741,7 +742,6 @@ section.shape-sun::after {
 
 :is([class^="report-"] svg) {
 	position: absolute;
-	z-index: -1;
 }
 
 .report-title > svg {
